# test-dependabot

./: pyproject.toml
.github/: dependabot-bot.yml  dependabot.yml
