[tool.poetry]
name = "test-dependabot"
version = "0.1.0"
description = ""
authors = ["Philippe Granger <philippe.granger@servicenow.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
